--- a/web/css/sfNestedComment.css
+++ b/web/css/sfNestedComment.css
@@ -1,285 +1,77 @@
-input,
-textarea,
-.pingback a.url {
-	font-family: Georgia, "Bitstream Charter", serif;
-}
-
-h3#comments-title,
-h3#reply-title,
-#cancel-comment-reply-link,
-.comment-meta,
-.comment-body tr th,
-.comment-body thead th,
-#respond label,
-.navigation,
-.page-title,
-.pingback p,
-.reply,
-input[type=submit] {
-	font-family: "Helvetica Neue", Arial, Helvetica, "Nimbus Sans L", sans-serif;
-}
-input[type="text"],
-textarea {
-	background: #f9f9f9;
-	border: 1px solid #ccc;
-	box-shadow: inset 1px 1px 1px rgba(0,0,0,0.1);
-	-moz-box-shadow: inset 1px 1px 1px rgba(0,0,0,0.1);
-	-webkit-box-shadow: inset 1px 1px 1px rgba(0,0,0,0.1);
-	padding: 2px;
-}
 /* =Navigation
 -------------------------------------------------------------- */
-
-#sfNestedComments .navigation {
-	color: #888;
-	font-size: 12px;
-	line-height: 18px;
-	overflow: hidden;
-}
+#sfNestedComments .navigation {font-size: 12px;line-height: 18px;overflow: hidden;}
 #sfNestedComments .navigation a:link,
-#sfNestedComments .navigation a:visited {
-	color: #888;
-	text-decoration: none;
-}
+#sfNestedComments .navigation a:visited {text-decoration: none;}
 #sfNestedComments .navigation a:active,
-#sfNestedComments .navigation a:hover {
-	color: #ff4b33;
-}
-#sfNestedComments .nav-previous {
-	float: left;
-	width: 50%;
-}
-#sfNestedComments .nav-next {
-	float: right;
-	text-align: right;
-	width: 50%;
-}
-#sfNestedComments #nav-above {
-	margin: 0 0 18px 0;
-}
-#sfNestedComments #nav-above {
-	display: none;
-}
-#sfNestedComments .paged #nav-above,
-.single #nav-above {
-	display: block;
-}
-#sfNestedComments #nav-below {
-	margin: -18px 0 0 0;
-}
+#sfNestedComments .navigation a:hover {color: #ff4b33;}
+#sfNestedComments .nav-previous {float: left;width: 50%;}
+#sfNestedComments .nav-next {float: right;text-align: right;width: 50%;}
+#sfNestedComments #nav-above {margin: 0 0 18px 0;}
+#sfNestedComments #nav-above {display: none;}
+#sfNestedComments .paged #nav-above,.single #nav-above {display: block;}
+#sfNestedComments #nav-below {margin: -18px 0 0 0;}
 
 /* =Comments
 -------------------------------------------------------------- */
-#comments {
-	clear: both;
-}
-#comments .navigation {
-	padding: 0 0 18px 0;
-}
+#comments {float: left;margin: 0px 0px 15px;min-height: 1px;padding: 0px;width: 100%;}
+#comments .navigation {padding: 0 0 18px 0;}
 h3#comments-title,
-h3#reply-title {
-	color: #000;
-	font-size: 20px;
-	font-weight: bold;
-	margin-bottom: 0;
-}
-h3#comments-title {
-	padding: 24px 0;
-}
-.commentlist {
-	list-style: none;
-	margin: 0;
-}
-.commentlist li.comment {
-	border-bottom: 1px solid #e7e7e7;
-	line-height: 24px;
-	margin: 0 0 24px 0;
-	padding: 0 0 0 56px;
-	position: relative;
-}
-.commentlist li:last-child {
-	border-bottom: none;
-	margin-bottom: 0;
-}
+h3#reply-title {color: #000;font-size: 20px;font-weight: bold;margin-bottom: 0;}
+h3#comments-title {padding: 24px 0;}
 #comments .comment-body ul,
-#comments .comment-body ol {
-	margin-bottom: 18px;
-}
-#comments .comment-body p:last-child {
-	margin-bottom: 6px;
-}
-#comments .comment-body blockquote p:last-child {
-	margin-bottom: 24px;
-}
-.commentlist ol {
-	list-style: decimal;
-}
-.commentlist .avatar {
-	position: absolute;
-	top: 4px;
-	left: 0;
-}
-.comment-author {
-}
-.comment-author cite {
-	color: #000;
-	font-style: normal;
-	font-weight: bold;
-}
-.comment-author .says {
-	font-style: italic;
-}
-.comment-meta {
-	font-size: 12px;
-	margin: 0 0 18px 0;
-}
-.comment-meta a:link,
-.comment-meta a:visited {
-	color: #888;
-	text-decoration: none;
-}
-.comment-meta a:active,
-.comment-meta a:hover {
-	color: #ff4b33;
-}
-.commentlist .even {
-}
-.commentlist .bypostauthor {
-}
-.reply {
-	font-size: 12px;
-	padding: 0 0 24px 0;
-}
-.reply a,
-a.comment-edit-link {
-	color: #888;
-}
-.reply a:hover,
-a.comment-edit-link:hover {
-	color: #ff4b33;
-}
-.commentlist .children {
-	list-style: none;
-	margin: 0;
-}
-.commentlist .children li {
-	border: none;
-	margin: 0;
-}
-.nopassword,
-.nocomments {
-	display: none;
-}
-#comments .pingback {
-	border-bottom: 1px solid #e7e7e7;
-	margin-bottom: 18px;
-	padding-bottom: 18px;
-}
-.commentlist li.comment+li.pingback {
-	margin-top: -6px;
-}
-#comments .pingback p {
-	color: #888;
-	display: block;
-	font-size: 12px;
-	line-height: 18px;
-	margin: 0;
-}
-#comments .pingback .url {
-	font-size: 13px;
-	font-style: italic;
-}
+#comments .comment-body ol {margin-bottom: 18px;}
+#comments .comment-body p:last-child {margin-bottom: 6px;}
+#comments .comment-body blockquote p:last-child {margin-bottom: 24px;}
+#comments .comment-body{padding: 0px 0px 9px;}
+#comments .comment-author cite {color: #000;	font-style: normal;	font-weight: bold;}
+#comments .comment-author .says {font-style: italic;}
+#comments .comment-meta {font-size: 12px;	margin: 0 0 18px 0;}
+#comments .comment-meta a:link,.comment-meta a:visited {text-decoration: none;}
+#comments .comment-meta a:active,.comment-meta a:hover {color: #ff4b33;}
+#comments .reply {font-size: 12px;	padding: 0 0 24px 0;}
+#comments .reply a:hover, #comments a.comment-edit-link:hover {color: #ff4b33;}
+#comments .commentlist {list-style: none;margin: 0;padding: 0;}
+#comments .commentlist ol {list-style: decimal;}
+#comments .commentlist li.comment {line-height: 24px;margin: 0 0 24px 0;padding: 0 0 0 12px;position: relative;}
+#comments .commentlist li:last-child {border-bottom: none;margin-bottom: 0;}
+#comments .commentlist .children {list-style: none;margin: 0;padding: 0;}
+#comments .commentlist .children li {border: none;margin: 0;}
+#comments .commentlist img.avatar {top: 4px;margin: 0px 5px 0px 10px;float: right;border: 1px solid #E6E6E6;}
+#comments .commentlist li.comment+li.pingback {margin-top: -6px;}
+#comments .pingback {border-bottom: 1px solid #e7e7e7;margin-bottom: 18px;padding-bottom: 18px;}
+#comments .pingback p {color: #888;display: block;font-size: 12px;line-height: 18px;margin: 0;}
+#comments .pingback .url {font-size: 13px;font-style: italic;}
+#comments .comment.moderated {font-style: italic; background-color: #FFFFEE;}
 
 /* Comments form */
-input[type=submit] {
-	color: #333;
-}
-#respond {
-	border-top: 1px solid #e7e7e7;
-	margin: 24px 0;
-	overflow: hidden;
-	position: relative;
-}
-#respond p {
-	margin: 0;
-}
-#respond .comment-notes {
-	margin-bottom: 1em;
-}
-.form-allowed-tags {
-	line-height: 1em;
-}
-.children #respond {
-	margin: 0 48px 0 0;
-}
-h3#reply-title {
-	margin: 18px 0;
-}
-#comments-list #respond {
-	margin: 0 0 18px 0;
-}
-#comments-list ul #respond {
-	margin: 0;
-}
-#cancel-comment-reply-link {
-	font-size: 12px;
-	font-weight: normal;
-	line-height: 18px;
-}
-#respond .required {
-	color: #ff4b33;
-	font-weight: bold;
-}
-#respond label {
-	color: #888;
-	font-size: 12px;
-}
-#respond input {
-	margin: 0 0 9px;
-	width: 98%;
-}
-#respond textarea {
-	width: 98%;
-}
-#respond .form-allowed-tags {
-	color: #888;
-	font-size: 12px;
-	line-height: 18px;
-}
-#respond .form-allowed-tags code {
-	font-size: 11px;
-}
-#respond .form-submit {
-	margin: 12px 0;
-}
-#respond .form-submit input {
-	font-size: 14px;
-	width: auto;
-}
+.children #respond {margin: 0 48px 0 0;}
+#respond {border-top: 1px solid #e7e7e7;margin: 24px 0;	overflow: hidden;	position: relative;}
+#respond p {margin: 0;}
+#respond .comment-notes {margin-bottom: 1em;}
+#respond.form-allowed-tags {line-height: 1em;}
+h3#reply-title {margin: 18px 0;}
+#comments-list #respond {margin: 0 0 18px 0;}
+#comments-list ul #respond {margin: 0;}
+#cancel-comment-reply-link {font-size: 12px;font-weight: normal;line-height: 18px;}
+#respond .required {color: #ff4b33;	font-weight: bold;}
+#respond label {font-size: 12px;}
+#respond input {margin: 0 0 9px;width: 98%;}
+#respond textarea {width: 98%;}
+#respond .form-allowed-tags {font-size: 12px;line-height: 18px;}
+#respond .form-allowed-tags code {font-size: 11px;}
+#respond .form-submit {margin: 12px 0;}
+#respond .form-submit input {font-size: 14px;	width: auto;}
+#respond div.form_error label {color: red;}
+#cancel-comment-reply-link {display: none;}
 
-
-.comment.moderated { 
-  font-style: italic; background-color: #FFFFEE;
-}
-#respond div.form_error label { 
-  color: red;
-}
-#cancel-comment-reply-link { 
-  display: none;
-}
-.error-page {
-  -moz-border-radius: 11px 11px 11px 11px;
-  background: none repeat scroll 0 0 #FFFFFF;
-  border: 1px solid #DFDFDF;
-  color: #333333;
-  font-family: Verdana,Arial,"Bitstream Vera Sans",sans-serif;
-  padding: 1em 2em;
-}
-
-table.recentcommentsavatar img.avatar {border: 0px; margin:0;}
+/* Recent Comments */
+table.recentcommentsavatar img.avatar {border: 0px;margin:0;}
 table.recentcommentsavatar a {border: 0px !important;background-color: transparent !important}
-td.recentcommentstextend, td.recentcommentstexttop {line-height: 1.4em; vertical-align: middle; }
+td.recentcommentstextend, td.recentcommentstexttop {line-height: 1.4em;vertical-align: middle; }
 td.recentcommentsavatartop {padding:0px 0px 1px 0px;margin:0px; }
 td.recentcommentsavatarend {padding:0px 0px 1px 0px;margin:0px; }
-td.recentcommentstexttop { border: none !important;padding:0px 0px 0px 10px; text-align: left;}
-td.recentcommentstextend { border: none !important;padding:0px 0px 2px 10px; text-align: left;}
+td.recentcommentstexttop {border: none !important;padding:0px 0px 0px 10px;text-align: left;}
+td.recentcommentstextend {border: none !important;padding:0px 0px 2px 10px;text-align: left;}
+
+.error-page {-moz-border-radius: 11px 11px 11px 11px;background: none repeat scroll 0 0 #FFFFFF;border: 1px solid #DFDFDF;color: #333333;font-family: Verdana,Arial,"Bitstream Vera Sans",sans-serif;padding: 1em 2em;}
