--- a/web/css/sfNestedComment.css
+++ b/web/css/sfNestedComment.css
@@ -64,7 +64,7 @@ h3#reply-title {margin: 18px 0;}
 #respond .form-allowed-tags code {font-size: 11px;}
 #respond .form-submit {margin: 12px 0;}
 #respond .form-submit input {font-size: 14px;width: auto;}
-.comment.moderated {font-style: italic;background-color: #FFFFEE;}
+.comment-moderated, .comment-closed {font-style: italic;background-color: #FFFFEE;}
 #respond div.form_error label {color: red;}
 #cancel-comment-reply-link {display: none;}
 .error-page {-moz-border-radius: 11px 11px 11px 11px;background: none repeat scroll 0 0 #FFFFFF;border: 1px solid #DFDFDF;color: #333333;font-family: Verdana,Arial,"Bitstream Vera Sans",sans-serif;padding: 1em 2em;}
@@ -74,3 +74,4 @@ td.recentcommentstextend, td.recentcommentstexttop {line-height: 1.4em; vertical
 td.recentcommentsavatartop, td.recentcommentsavatarend {padding:0px 0px 1px 0px;margin:0px;}
 td.recentcommentstexttop {border: none !important;padding:0px 0px 0px 10px; text-align: left;}
 td.recentcommentstextend {border: none !important;padding:0px 0px 2px 10px; text-align: left;}
+.comment-body pre {background: none repeat scroll 0 0 #FAFAFA;border-color: #CCCCCC;border-style: solid;border-width: 1px 1px 1px 15px;color: #555555;font-family: monospace;font-size: 12px;line-height: 16px;margin: 0 0 20px;overflow: auto;padding: 0 5px 16px;width: 95%;}
